--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<p>First capstone<br><a href="https://drive.google.com/file/d/1KjbMWZ88dCMRyJD22SmdD9_FWdnbHbJ5/view?usp=sharing">Lariat car rental</a></p>
 								<p>Second capstone<br><a href="putlinkhere">PROJECT NAME 3</a></p>
 								<p>Making API request in python<br><a href="putlinkhere">PROJECT NAME 4</a></p>
-								<p>Web scraping<br><a href="putlinkhere">PROJECT NAME 5</a></p>
+								<p>Web scraping<br><a href="putinkhere">PROJECT NAME 5</a></p>
 								<p>Final capstone<br><a href="putlinkhere">PROJECT NAME 6</a></p>
 							</article>
 
