--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>HR compensation tool<br><a href="https://drive.google.com/drive/folders/15PhpBlo--7tzjteCzMaOSCRSVpn3jyJU?usp=sharing">2019 Business Strategy</a></p>
 								<p>First capstone<br><a href="https://drive.google.com/drive/folders/1-NAhy6e_zCZb_Qe_OjL_1Myl9gjh9Z0d?usp=sharing">Lariat car rental</a></p>
-								<p>Second capstone<br><a href="https://drive.google.com/drive/folders/1JfzYWdTrJcpJG3I4ljGrdNx3boYTke9Z?usp=sharing">PROJECT NAME 3</a></p>
-								<p>Making API request in python<br><a href="putlinkhere">Fuel Efficiency</a></p>
+								<p>Second capstone<br><a href="https://drive.google.com/drive/folders/1JfzYWdTrJcpJG3I4ljGrdNx3boYTke9Z?usp=sharing">Fuel Efficiency</a></p>
+								<p>Making API request in python<br><a href="putlinkhere">PROJECT NAME 3</a></p>
 								<p>Web scraping<br><a href="putinkhere">PROJECT NAME 5</a></p>
 								<p>Final capstone<br><a href="https://drive.google.com/drive/folders/1z1zOlfvaGb9zv1lFDJkD8qwoUDYBgxst?usp=sharing">What Makes Human Happy In This Modern Era?</a></p>
 							</article>
