--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								
 								<ul class="icons">
 									
-									<li><a href="linkedin.com/in/albert-setiabudi-6846b4106" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://albertdkk.github.io/albertpml.github.io/#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="albertdkk/albertpml.github.io" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="TABLEAU URL HERE" class="icon fa-plus"><span class="label">Tableau</span></a></li>
 								</ul>
