--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 								
 								<ul class="icons">
 									
-									<li><a href="https://albertdkk.github.io/albertpml.github.io/#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="albertdkk/albertpml.github.io" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/albert-setiabudi/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="albertdkk.github.io/albertpml.github.io/#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="TABLEAU URL HERE" class="icon fa-plus"><span class="label">Tableau</span></a></li>
 								</ul>
 							</article>
