--- a/index.html
+++ b/index.html
@@ -67,6 +67,26 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>You can call me, Shan.</p>
+								<p> My name is Albert, mostly known as Shan. 
+									I am a Data Analyst with a background in Mass Media Communication specialize in Journalistic and Movie Editing. 
+									I am interested in data analysis and visualization, I am really proficient with Excel, SQL, Python, and Tableau to work with multiple datasets to analyze business data. 
+									I have several years of experience as a movie editor for small event documentary and news. 
+									Strong work ethic with a Bachelor’s degree from the University of Pelita Harapan, Indonesia. 
+									Specialties: Data mining, data analysis, and telling stories with data </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 							</article>
 
 						<!-- Contact -->
