--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 									I am a Data Analyst with a background in Mass Media Communication specialize in Journalistic and Movie Editing. 
 									I am interested in data analysis and visualization, I am really proficient with Excel, SQL, Python, and Tableau to work with multiple datasets to analyze business data. 
 									I have several years of experience as a movie editor for small event documentary and news. 
-									Strong work ethic with a Bachelor’s degree from the University of Pelita Harapan, Indonesia. 
-									Specialties: Data mining, data analysis, and telling stories with data </p>
+									Strong work ethic with a Bachelor’s degree from the University of Pelita Harapan, Indonesia. </p>
+								<p> Specialties: Data mining, data analysis, and telling stories with data </p>
 
 
 
@@ -95,7 +95,7 @@
 								<ul class="icons">
 									
 									<li><a href="https://www.linkedin.com/in/albert-setiabudi/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="albertdkk.github.io/albertpml.github.io/#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://albertdkk.github.io/albertpml.github.io/#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="TABLEAU URL HERE" class="icon fa-plus"><span class="label">Tableau</span></a></li>
 								</ul>
 							</article>
