--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>I've done some amazing Excel work in addition to Python and SQL. Check out my <a href="#work">work</a>.</p>
+								<p>I've done some amazing Excel work in addition to SQL, and R is on the way. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
